--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "dataloader": "^1.4.0",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
+    "firebase-admin": "^5.12.0",
     "firebase-functions": "^1.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
