--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
 - node
+install:
+- npm install -g codecov
 branches:
   only:
   - master
@@ -10,7 +12,9 @@ cache:
   directories:
   - /node_modules/
 script:
-- yarn test &&
+- yarn coverage:run &&
+  codecov &&
+  yarn coverage:cleanup &&
   yarn build
 before_deploy:
 - cd functions &&
