--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "serve": "firebase serve",
     "watch:server": "webpack --config webpack.config.server.js --progress --colors --watch",
     "test": "react-scripts test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "coverage": "yarn coverage:run && yarn coverage:submit && yarn coverage:cleanup",
+    "coverage": "yarn coverage:run && yarn coverage:cleanup",
     "coverage:run": "react-scripts test --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "coverage:submit": "cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage",
     "coverage:cleanup": "rm -rf ./coverage",
     "eject": "react-scripts eject",
     "flow": "flow"
