--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 node_js:
 - node
 install:
-- npm install -g codecov
+- yarn global add codecov
+- yarn install
 branches:
   only:
   - master
