--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "flow": "flow"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.js", "!src/style/semantic/**/*.js", "!src/stories/*.js"],
+    "collectCoverageFrom": ["src/client/**/*.js", "!src/client/style/semantic/**/*.js"],
     "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
+    "apollo-test-utils": "^0.3.2",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -75,7 +76,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.4",
+    "apollo-boost": "^0.1.6",
     "apollo-server-express": "^1.3.2",
     "apollo-tracing": "^0.1.3",
     "body-parser": "^1.15.2",
