--- a/functions/package.json
+++ b/functions/package.json
@@ -9,13 +9,19 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.6",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cross-fetch": "^2.2.0",
+    "dataloader": "^1.4.0",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "firebase-admin": "^5.10.0",
     "firebase-functions": "^1.0.2",
+    "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.2",
+    "lodash": "^4.17.10",
     "node-fetch": "^2.0.0",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
