--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,10 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
+        "source": "api",
+        "function": "api"
+      },
+      {
         "source": "**",
         "function": "app"
       }
