--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@mattailes/common",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "emotion": "^9.1.3",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  }
 }
