--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -4,24 +4,20 @@
   "private": true,
   "proxy": "http://localhost:5000/website-b10e5/us-central1/api",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "coverage": "react-scripts test --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "test:debug":
+      "react-app-rewired --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "coverage": "react-app-rewired --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage:cleanup": "rm -rf ./coverage",
     "eject": "react-scripts eject",
     "flow": "flow",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ]
+    "collectCoverageFrom": ["src/**/*.js"],
+    "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
     "eslint": "^4.6.1",
@@ -33,6 +29,8 @@
     "flow-bin": "^0.73.0",
     "nock": "^9.0.22",
     "raf": "^3.4.0",
+    "react-app-rewire-yarn-workspaces": "^1.0.3",
+    "react-app-rewired": "^1.5.2",
     "react-scripts": "^1.0.1",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.3.0"
