--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,8 +7,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "test:debug":
-      "react-app-rewired --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "test:debug": "react-app-rewired --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage": "react-app-rewired --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage:cleanup": "rm -rf ./coverage",
     "eject": "react-scripts eject",
@@ -16,8 +15,13 @@
     "deploy": "firebase deploy --token $FIREBASE_TOKEN"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.js"],
-    "coverageReporters": ["text", "lcov"]
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
   },
   "devDependencies": {
     "eslint": "^4.6.1",
@@ -45,7 +49,6 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest-enzyme": "^6.0.0",
     "normalize.css": "^8.0.0",
-    "prop-types": "^15.5.4",
     "react": "^16.0.0",
     "react-apollo": "^2.1.1",
     "react-dom": "^16.0.0",
