--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -47,6 +47,7 @@
     "emotion": "^9.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "facepaint": "^1.2.1",
     "jest-enzyme": "^6.0.0",
     "normalize.css": "^8.0.0",
     "react": "^16.0.0",
