--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,21 +7,17 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "test:debug": "react-app-rewired --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "coverage": "react-app-rewired --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "test:debug":
+      "react-app-rewired --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "coverage": "react-app-rewired test --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage:cleanup": "rm -rf ./coverage",
     "eject": "react-scripts eject",
     "flow": "flow",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ]
+    "collectCoverageFrom": ["src/**/*.js"],
+    "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
     "eslint": "^4.6.1",
