--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,9 +23,10 @@
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.73.0",
     "nodemon-webpack-plugin": "^3.0.1",
-    "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4",
-    "webpack-node-externals": "^1.7.2"
+    "webpack": "^4.11.1",
+    "webpack-cli": "^2.1.5",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-stylish": "^0.1.8"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
