--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,6 +2,9 @@
   "name": "@mattailes/api",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "8"
+  },
   "scripts": {
     "build": "webpack-cli --progress --colors",
     "watch:server": "webpack-cli --progress --colors --watch",
@@ -35,7 +38,7 @@
     "dataloader": "^1.4.0",
     "express": "^4.16.3",
     "firebase-admin": "^5.12.1",
-    "firebase-functions": "^1.0.3",
+    "firebase-functions": "^2.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.2",
