--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,7 +24,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "5.4.0",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.13.0",
@@ -56,6 +55,7 @@
     "react-router": "4.3.1",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.3.1",
+    "react-scripts": "^2.0.0-next.a671462c",
     "redux": "4.0.0",
     "redux-thunk": "2.3.0",
     "shortid": "2.2.12"
