--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,7 +6,6 @@
     "flow": "flow"
   },
   "devDependencies": {
-    "eslint": "4.15.0",
-    "flow-bin": "0.74.0"
+    "flow-bin": "^0.74.0"
   }
 }
