--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,6 +11,11 @@
     "flow": "flow",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN"
   },
+  "workspaces": {
+    "nohoist": [
+      "@mattailes/types"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "7.1.0",
     "@babel/plugin-transform-runtime": "7.1.0",
