--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
+  "peerDependencies": {
     "emotion": "9.2.12",
     "react": "16.5.2",
     "react-dom": "16.5.2"
