--- a/package.json
+++ b/package.json
@@ -36,8 +36,15 @@
     ]
   },
   "devDependencies": {
-    "husky": "^1.1.0",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3"
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-flowtype": "2.50.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
+    "husky": "1.1.0",
+    "lint-staged": "7.3.0",
+    "prettier": "1.14.3"
   }
 }
