--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,9 @@
     "flow": "flow",
     "build-library:prod": "rm -rf ./build && webpack-cli --mode=production --progress --colors",
     "build-library:dev": "rm -rf ./build && webpack-cli --mode=development --progress --colors",
-    "lint": "../../node_modules/.bin/eslint ./src"
+    "lint": "../../node_modules/.bin/eslint ./src",
+    "storybook": "start-storybook -p 9009",
+    "build-storybook": "build-storybook"
   },
   "main": "build/index.js",
   "files": [
@@ -25,7 +27,13 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-info": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "@storybook/react": "^3.4.11",
     "babel-loader": "8.0.4",
+    "babel-runtime": "^6.26.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-babel": "5.2.1",
     "eslint-plugin-flowtype": "2.50.3",
@@ -39,5 +47,6 @@
     "webpack-cli": "3.1.2",
     "webpack-node-externals": "1.7.2",
     "webpack-stylish": "0.1.8"
-  }
+  },
+  "dependencies": {}
 }
