--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,13 +27,13 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.1.2",
     "@storybook/addon-actions": "3.4.11",
     "@storybook/addon-info": "3.4.11",
     "@storybook/addon-links": "3.4.11",
     "@storybook/addons": "3.4.11",
     "@storybook/react": "3.4.11",
     "babel-loader": "8.0.4",
-    "babel-runtime": "6.26.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-babel": "5.2.1",
     "eslint-plugin-flowtype": "2.50.3",
