--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@mattailes/types": "1.0.0",
     "@mattailes/ui": "1.0.0",
+    "@reach/router": "1.2.1",
     "apollo-boost": "0.1.16",
     "cross-fetch": "2.2.2",
     "dotenv": "6.1.0",
@@ -55,9 +56,6 @@
     "react-dom": "16.5.2",
     "react-loadable": "5.5.0",
     "react-redux": "5.0.7",
-    "react-router": "4.3.1",
-    "react-router-config": "4.4.0-beta.3",
-    "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
