--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.3.0",
     "flow-bin": "0.83.0",
     "react-scripts": "2.0.5",
     "webpack": "4.20.2",
