--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.3.0",
     "flow-bin": "0.83.0",
     "nock": "10.0.1",
     "raf": "3.4.0",
