--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,7 +6,7 @@
     "flow": "flow"
   },
   "devDependencies": {
-    "eslint-plugin-sort-imports-es6-autofix": "^0.3.0",
+    "eslint-plugin-sort-imports-es6-autofix": "0.3.0",
     "flow-bin": "0.83.0",
     "react-scripts": "2.0.5"
   }
